chap5/y.output
   0  $accept : program $end

   1  program : exp

   2  exp : lvalue
   3      | NIL
   4      | INT
   5      | STRING
   6      | MINUS exp
   7      | funcall
   8      | exp PLUS exp
   9      | exp MINUS exp
  10      | exp TIMES exp
  11      | exp DIVIDE exp
  12      | exp EQ exp
  13      | exp NEQ exp
  14      | exp LT exp
  15      | exp LE exp
  16      | exp GT exp
  17      | exp GE exp
  18      | exp AND exp
  19      | exp OR exp
  20      | ID LBRACE recordarg RBRACE
  21      | ID LBRACK exp RBRACK OF exp
  22      | lvalue ASSIGN exp
  23      | IF exp THEN exp ELSE exp
  24      | IF exp THEN exp
  25      | WHILE exp DO exp
  26      | FOR ID ASSIGN exp TO exp DO exp
  27      | BREAK
  28      | LET decs IN expseq END
  29      | LPAREN expseq RPAREN

  30  decs : dec decs
  31       |

  32  dec : tydec
  33      | vardec
  34      | fundec

  35  tydec : TYPE ID EQ ty tydec1

  36  tydec1 : TYPE ID EQ ty tydec1
  37         |

  38  ty : ID
  39     | LBRACE tyfields RBRACE
  40     | ARRAY OF ID

  41  tyfields : ID COLON ID tyfields1
  42           |

  43  tyfields1 : COMMA ID COLON ID tyfields1
  44            |

  45  vardec : VAR ID ASSIGN exp
  46         | VAR ID COLON ID ASSIGN exp

  47  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp fundec1
  48         | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp fundec1

  49  fundec1 : FUNCTION ID LPAREN tyfields RPAREN EQ exp fundec1
  50          | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp fundec1
  51          |

  52  lvalue : ID
  53         | lvalue DOT ID
  54         | lvalue LBRACK exp RBRACK
  55         | ID LBRACK exp RBRACK

  56  expseq : exp expseq1
  57         |

  58  expseq1 : SEMICOLON exp expseq1
  59          |

  60  funcall : ID LPAREN RPAREN
  61          | ID LPAREN callarg RPAREN

  62  callarg : exp callarg1

  63  callarg1 : COMMA exp callarg1
  64           |

  65  recordarg : ID EQ exp recordarg1
  66            |

  67  recordarg1 : COMMA ID EQ exp recordarg1
  68             |

state 0
	$accept : . program $end  (0)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	program  goto 12
	exp  goto 13
	funcall  goto 14
	lvalue  goto 15


1: shift/reduce conflict (shift 17, reduce 52) on LBRACK
state 1
	exp : ID . LBRACE recordarg RBRACE  (20)
	exp : ID . LBRACK exp RBRACK OF exp  (21)
	lvalue : ID .  (52)
	lvalue : ID . LBRACK exp RBRACK  (55)
	funcall : ID . LPAREN RPAREN  (60)
	funcall : ID . LPAREN callarg RPAREN  (61)

	LPAREN  shift 16
	LBRACK  shift 17
	LBRACE  shift 18
	$end  reduce 52
	COMMA  reduce 52
	SEMICOLON  reduce 52
	RPAREN  reduce 52
	RBRACK  reduce 52
	RBRACE  reduce 52
	DOT  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	DIVIDE  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LT  reduce 52
	LE  reduce 52
	GT  reduce 52
	GE  reduce 52
	AND  reduce 52
	OR  reduce 52
	ASSIGN  reduce 52
	THEN  reduce 52
	ELSE  reduce 52
	TO  reduce 52
	DO  reduce 52
	IN  reduce 52
	END  reduce 52
	FUNCTION  reduce 52
	VAR  reduce 52
	TYPE  reduce 52


state 2
	exp : STRING .  (5)

	.  reduce 5


state 3
	exp : INT .  (4)

	.  reduce 4


state 4
	exp : LPAREN . expseq RPAREN  (29)
	expseq : .  (57)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 57

	exp  goto 19
	funcall  goto 14
	lvalue  goto 15
	expseq  goto 20


state 5
	exp : MINUS . exp  (6)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 21
	funcall  goto 14
	lvalue  goto 15


state 6
	exp : IF . exp THEN exp ELSE exp  (23)
	exp : IF . exp THEN exp  (24)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 22
	funcall  goto 14
	lvalue  goto 15


state 7
	exp : WHILE . exp DO exp  (25)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 23
	funcall  goto 14
	lvalue  goto 15


state 8
	exp : FOR . ID ASSIGN exp TO exp DO exp  (26)

	ID  shift 24
	.  error


state 9
	exp : LET . decs IN expseq END  (28)
	decs : .  (31)

	FUNCTION  shift 25
	VAR  shift 26
	TYPE  shift 27
	IN  reduce 31

	dec  goto 28
	vardec  goto 29
	decs  goto 30
	tydec  goto 31
	fundec  goto 32


state 10
	exp : BREAK .  (27)

	.  reduce 27


state 11
	exp : NIL .  (3)

	.  reduce 3


state 12
	$accept : program . $end  (0)

	$end  accept


state 13
	program : exp .  (1)
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	$end  reduce 1


state 14
	exp : funcall .  (7)

	.  reduce 7


state 15
	exp : lvalue .  (2)
	exp : lvalue . ASSIGN exp  (22)
	lvalue : lvalue . DOT ID  (53)
	lvalue : lvalue . LBRACK exp RBRACK  (54)

	LBRACK  shift 45
	DOT  shift 46
	ASSIGN  shift 47
	$end  reduce 2
	COMMA  reduce 2
	SEMICOLON  reduce 2
	RPAREN  reduce 2
	RBRACK  reduce 2
	RBRACE  reduce 2
	PLUS  reduce 2
	MINUS  reduce 2
	TIMES  reduce 2
	DIVIDE  reduce 2
	EQ  reduce 2
	NEQ  reduce 2
	LT  reduce 2
	LE  reduce 2
	GT  reduce 2
	GE  reduce 2
	AND  reduce 2
	OR  reduce 2
	THEN  reduce 2
	ELSE  reduce 2
	TO  reduce 2
	DO  reduce 2
	IN  reduce 2
	END  reduce 2
	FUNCTION  reduce 2
	VAR  reduce 2
	TYPE  reduce 2


state 16
	funcall : ID LPAREN . RPAREN  (60)
	funcall : ID LPAREN . callarg RPAREN  (61)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	RPAREN  shift 48
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 49
	funcall  goto 14
	lvalue  goto 15
	callarg  goto 50


state 17
	exp : ID LBRACK . exp RBRACK OF exp  (21)
	lvalue : ID LBRACK . exp RBRACK  (55)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 51
	funcall  goto 14
	lvalue  goto 15


state 18
	exp : ID LBRACE . recordarg RBRACE  (20)
	recordarg : .  (66)

	ID  shift 52
	RBRACE  reduce 66

	recordarg  goto 53


state 19
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)
	expseq : exp . expseq1  (56)
	expseq1 : .  (59)

	SEMICOLON  shift 54
	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	RPAREN  reduce 59
	END  reduce 59

	expseq1  goto 55


state 20
	exp : LPAREN expseq . RPAREN  (29)

	RPAREN  shift 56
	.  error


state 21
	exp : MINUS exp .  (6)
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	.  reduce 6


state 22
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)
	exp : IF exp . THEN exp ELSE exp  (23)
	exp : IF exp . THEN exp  (24)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	THEN  shift 57
	.  error


state 23
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)
	exp : WHILE exp . DO exp  (25)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	DO  shift 58
	.  error


state 24
	exp : FOR ID . ASSIGN exp TO exp DO exp  (26)

	ASSIGN  shift 59
	.  error


state 25
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp fundec1  (47)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp fundec1  (48)

	ID  shift 60
	.  error


state 26
	vardec : VAR . ID ASSIGN exp  (45)
	vardec : VAR . ID COLON ID ASSIGN exp  (46)

	ID  shift 61
	.  error


state 27
	tydec : TYPE . ID EQ ty tydec1  (35)

	ID  shift 62
	.  error


state 28
	decs : dec . decs  (30)
	decs : .  (31)

	FUNCTION  shift 25
	VAR  shift 26
	TYPE  shift 27
	IN  reduce 31

	dec  goto 28
	vardec  goto 29
	decs  goto 63
	tydec  goto 31
	fundec  goto 32


state 29
	dec : vardec .  (33)

	.  reduce 33


state 30
	exp : LET decs . IN expseq END  (28)

	IN  shift 64
	.  error


state 31
	dec : tydec .  (32)

	.  reduce 32


state 32
	dec : fundec .  (34)

	.  reduce 34


state 33
	exp : exp PLUS . exp  (8)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 65
	funcall  goto 14
	lvalue  goto 15


state 34
	exp : exp MINUS . exp  (9)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 66
	funcall  goto 14
	lvalue  goto 15


state 35
	exp : exp TIMES . exp  (10)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 67
	funcall  goto 14
	lvalue  goto 15


state 36
	exp : exp DIVIDE . exp  (11)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 68
	funcall  goto 14
	lvalue  goto 15


state 37
	exp : exp EQ . exp  (12)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 69
	funcall  goto 14
	lvalue  goto 15


state 38
	exp : exp NEQ . exp  (13)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 70
	funcall  goto 14
	lvalue  goto 15


state 39
	exp : exp LT . exp  (14)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 71
	funcall  goto 14
	lvalue  goto 15


state 40
	exp : exp LE . exp  (15)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 72
	funcall  goto 14
	lvalue  goto 15


state 41
	exp : exp GT . exp  (16)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 73
	funcall  goto 14
	lvalue  goto 15


state 42
	exp : exp GE . exp  (17)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 74
	funcall  goto 14
	lvalue  goto 15


state 43
	exp : exp AND . exp  (18)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 75
	funcall  goto 14
	lvalue  goto 15


state 44
	exp : exp OR . exp  (19)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 76
	funcall  goto 14
	lvalue  goto 15


state 45
	lvalue : lvalue LBRACK . exp RBRACK  (54)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 77
	funcall  goto 14
	lvalue  goto 15


state 46
	lvalue : lvalue DOT . ID  (53)

	ID  shift 78
	.  error


state 47
	exp : lvalue ASSIGN . exp  (22)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 79
	funcall  goto 14
	lvalue  goto 15


state 48
	funcall : ID LPAREN RPAREN .  (60)

	.  reduce 60


state 49
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)
	callarg : exp . callarg1  (62)
	callarg1 : .  (64)

	COMMA  shift 80
	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	RPAREN  reduce 64

	callarg1  goto 81


state 50
	funcall : ID LPAREN callarg . RPAREN  (61)

	RPAREN  shift 82
	.  error


state 51
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)
	exp : ID LBRACK exp . RBRACK OF exp  (21)
	lvalue : ID LBRACK exp . RBRACK  (55)

	RBRACK  shift 83
	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	EQ  shift 37
	NEQ  shift 38
	LT  shift 39
	LE  shift 40
	GT  shift 41
	GE  shift 42
	AND  shift 43
	OR  shift 44
	.  error


state 52
	recordarg : ID . EQ exp recordarg1  (65)

	EQ  shift 84
	.  error


state 53
	exp : ID LBRACE recordarg . RBRACE  (20)

	RBRACE  shift 85
	.  error


state 54
	expseq1 : SEMICOLON . exp expseq1  (58)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 86
	funcall  goto 14
	lvalue  goto 15


state 55
	expseq : exp expseq1 .  (56)

	.  reduce 56


state 56
	exp : LPAREN expseq RPAREN .  (29)

	.  reduce 29


state 57
	exp : IF exp THEN . exp ELSE exp  (23)
	exp : IF exp THEN . exp  (24)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 87
	funcall  goto 14
	lvalue  goto 15


state 58
	exp : WHILE exp DO . exp  (25)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 88
	funcall  goto 14
	lvalue  goto 15


state 59
	exp : FOR ID ASSIGN . exp TO exp DO exp  (26)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 89
	funcall  goto 14
	lvalue  goto 15


state 60
	fundec : FUNCTION ID . LPAREN tyfields RPAREN EQ exp fundec1  (47)
	fundec : FUNCTION ID . LPAREN tyfields RPAREN COLON ID EQ exp fundec1  (48)

	LPAREN  shift 90
	.  error


state 61
	vardec : VAR ID . ASSIGN exp  (45)
	vardec : VAR ID . COLON ID ASSIGN exp  (46)

	COLON  shift 91
	ASSIGN  shift 92
	.  error


state 62
	tydec : TYPE ID . EQ ty tydec1  (35)

	EQ  shift 93
	.  error


state 63
	decs : dec decs .  (30)

	.  reduce 30


state 64
	exp : LET decs IN . expseq END  (28)
	expseq : .  (57)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	END  reduce 57

	exp  goto 19
	funcall  goto 14
	lvalue  goto 15
	expseq  goto 94


state 65
	exp : exp . PLUS exp  (8)
	exp : exp PLUS exp .  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	RPAREN  reduce 8
	RBRACK  reduce 8
	RBRACE  reduce 8
	PLUS  reduce 8
	MINUS  reduce 8
	EQ  reduce 8
	NEQ  reduce 8
	LT  reduce 8
	LE  reduce 8
	GT  reduce 8
	GE  reduce 8
	AND  reduce 8
	OR  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	TO  reduce 8
	DO  reduce 8
	IN  reduce 8
	END  reduce 8
	FUNCTION  reduce 8
	VAR  reduce 8
	TYPE  reduce 8


state 66
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp MINUS exp .  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 9
	COMMA  reduce 9
	SEMICOLON  reduce 9
	RPAREN  reduce 9
	RBRACK  reduce 9
	RBRACE  reduce 9
	PLUS  reduce 9
	MINUS  reduce 9
	EQ  reduce 9
	NEQ  reduce 9
	LT  reduce 9
	LE  reduce 9
	GT  reduce 9
	GE  reduce 9
	AND  reduce 9
	OR  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	TO  reduce 9
	DO  reduce 9
	IN  reduce 9
	END  reduce 9
	FUNCTION  reduce 9
	VAR  reduce 9
	TYPE  reduce 9


state 67
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp TIMES exp .  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	.  reduce 10


state 68
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp DIVIDE exp .  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	.  reduce 11


state 69
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp EQ exp .  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 12
	COMMA  reduce 12
	SEMICOLON  reduce 12
	RPAREN  reduce 12
	RBRACK  reduce 12
	RBRACE  reduce 12
	AND  reduce 12
	OR  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	TO  reduce 12
	DO  reduce 12
	IN  reduce 12
	END  reduce 12
	FUNCTION  reduce 12
	VAR  reduce 12
	TYPE  reduce 12


state 70
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp NEQ exp .  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 13
	COMMA  reduce 13
	SEMICOLON  reduce 13
	RPAREN  reduce 13
	RBRACK  reduce 13
	RBRACE  reduce 13
	AND  reduce 13
	OR  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	TO  reduce 13
	DO  reduce 13
	IN  reduce 13
	END  reduce 13
	FUNCTION  reduce 13
	VAR  reduce 13
	TYPE  reduce 13


state 71
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp LT exp .  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 14
	COMMA  reduce 14
	SEMICOLON  reduce 14
	RPAREN  reduce 14
	RBRACK  reduce 14
	RBRACE  reduce 14
	AND  reduce 14
	OR  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	TO  reduce 14
	DO  reduce 14
	IN  reduce 14
	END  reduce 14
	FUNCTION  reduce 14
	VAR  reduce 14
	TYPE  reduce 14


state 72
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp LE exp .  (15)
	exp : exp . GT exp  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 15
	COMMA  reduce 15
	SEMICOLON  reduce 15
	RPAREN  reduce 15
	RBRACK  reduce 15
	RBRACE  reduce 15
	AND  reduce 15
	OR  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	TO  reduce 15
	DO  reduce 15
	IN  reduce 15
	END  reduce 15
	FUNCTION  reduce 15
	VAR  reduce 15
	TYPE  reduce 15


state 73
	exp : exp . PLUS exp  (8)
	exp : exp . MINUS exp  (9)
	exp : exp . TIMES exp  (10)
	exp : exp . DIVIDE exp  (11)
	exp : exp . EQ exp  (12)
	exp : exp . NEQ exp  (13)
	exp : exp . LT exp  (14)
	exp : exp . LE exp  (15)
	exp : exp . GT exp  (16)
	exp : exp GT exp .  (16)
	exp : exp . GE exp  (17)
	exp : exp . AND exp  (18)
	exp : exp . OR exp  (19)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIVIDE  shift 36
	$end  reduce 16
	COMMA  reduce 16
	SEMICOLON  reduce 16
	RPAREN  reduce 16
	RBRACK  reduce 16
	RBRACE  reduce 16
	AND  reduce 16
	OR  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	TO  reduce 16
	DO  reduce 16
	IN  reduce 16
	END  reduce 16
	FUNCTION  reduce 16
	VAR  reduce 16
	TYPE  reduce 16

